--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,15 @@ requires = ["flit_core >=2,<4"]
 build-backend = "flit_core.buildapi"
 
 [tool.flit.metadata]
-module = ""
-author = "deathbeds"
-author-email = ""
-requires = []
+module = "{{name}}"
+author = "{{author | default('deathbeds')}}"
+author-email = "{{email}}"
+requires = [
+  {% for package in requires.split() %}"{{package}}", {% endfor %}
+]
 keywords = []
-home-page = ""
-license = ""
+home-page = "{{url}}"
+license = "{{license}}"
 description-file = "readme.md"
 
 
